// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The DialogManager component renders a closed dialog 1`] = `
<Component
  data-test="dialog-manager"
  disableEnforceFocus={true}
  keepMounted={true}
  maxWidth="lg"
  onClose={[Function]}
  open={false}
>
  <Component>
    <Connect(HideButton) />
  </Component>
</Component>
`;

exports[`The DialogManager component renders the DynamicDimension content in dialog 1`] = `
<Component
  data-test="dialog-manager"
  disableEnforceFocus={true}
  keepMounted={false}
  maxWidth="lg"
  onClose={[Function]}
  open={true}
>
  <Connect(DynamicDimension)
    dialogId="test"
  />
  <Component>
    <Connect(HideButton) />
    <Connect(WithStyles(AddToLayoutButton))
      dialogId="test"
    />
  </Component>
</Component>
`;
